# MOVIED

./: .gitignore  README.md  pyproject.toml
projecteweb-example-main/: db.sqlite3  fill_data.py  pyproject.toml
projecteweb-example-main/EndToEndTests/: test_1createOneReservation.py  test_2createMultipleReservations.py  test_3deleteOneReservation.py  test_4deleteMultipleReservations.py  test_5editOneReservation.py  test_6editMultipleReservations.py  test_login.py  test_logout.py  test_prova.py  test_signup.py
projecteweb-example-main/accounts/: forms.py  urls.py  views.py
projecteweb-example-main/accounts/migrations/: 0001_initial.py  0002_remove_movie_id_cinema_remove_reservation_id_cinema_and_more.py  0002_remove_title_award_remove_budget_movie_and_more.py  0002_reservation_movie.py  0003_initial.py  0003_remove_reservation_id_cinema_remove_movie_id_cinema_and_more.py
projecteweb-example-main/movied/: admin.py  apps.py  clinema_views.py  models.py  urls.py  views.py
projecteweb-example-main/movied/migrations/: 0001_initial.py  0002_alter_movie_year.py  0002_remove_cinema_id_cinema_remove_movie_ranking_and_more.py  0002_reservation_cinema.py  0002_reservation_showtime.py  (+5 more)
projecteweb-example-main/project/: settings.py  urls.py
projecteweb-example-main/scripts/: import_data.py
projecteweb-example-main/static/: styles.css
projecteweb-example-main/templates/: base.html  cinema.html  cinemas.html  edit_reservation.html  home.html  list_cinemas.html  list_movies.html  list_reservations.html  movie.html
projecteweb-example-main/web/: admin.py  models.py
(+4 files in other folders)
