[tool.poetry]
name = "movied"
version = "0.1.0"
description = ""
authors = ["Neus <neus.fdez.valls@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
pandas = "^2.2.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
