[tool.poetry]
name = "projecteweb-example"
version = "0.1.0"
description = ""
authors = ["David Sarrat González <113605621+davidsarratgonzalez@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.2"
django-extensions = "^3.2.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
